[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/explore-editor-theme/lists/StyleboxListItem.gd" type="Script" id=1]

[node name="StyleboxListItem" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 160 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding0" type="Control" parent="Layout"]
margin_right = 1280.0
margin_bottom = 8.0
rect_min_size = Vector2( 0, 8 )
mouse_filter = 2

[node name="PreviewContainer" type="CenterContainer" parent="Layout"]
margin_top = 12.0
margin_right = 1280.0
margin_bottom = 108.0
mouse_filter = 2

[node name="PreviewPanel" type="Panel" parent="Layout/PreviewContainer"]
margin_left = 592.0
margin_right = 688.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding1" type="Control" parent="Layout"]
margin_top = 112.0
margin_right = 1280.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 12 )
mouse_filter = 2

[node name="StyleboxName" type="Label" parent="Layout"]
margin_top = 128.0
margin_right = 1280.0
margin_bottom = 142.0
align = 1
